Revert "make project setup portable"
This reverts commit 7eaca03fcf7142e139b1f380a7d56e6654650018.